# chat-backend

./: .env.development  .env.production  .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  init.sql  main.py  pyproject.toml  requirements.txt  start_services.py  startup_fix.py
app/: dependencies.py  exceptions.py  main.py
app/api/: images.py  wallet.py
app/core/: cache.py  config.py  database.py  logging.py  metrics.py  providers.py
app/models/: __init__.py  balance.py  chat.py  payment.py
app/services/: __init__.py  balance_service.py  chat_service.py  lm_studio.py  openrouter_service.py  payment_service.py
docs/: RAZORPAY_WEBHOOK_SETUP.md  SECURITY.md
monitoring/: prometheus.yml
nginx/: nginx.conf
scripts/: start-payment-webhook.bat
tunnel/: Dockerfile  config.yml  create-dns-record.bat  create-independent-tunnel.bat  verify-dns.bat
